--- a/peterk/Docker/Dockerfile.local
+++ b/peterk/Docker/Dockerfile.local
@@ -10,9 +10,12 @@ ENV PYTHONUNBUFFERED 1
 RUN apt-get update \
     && apt-get install --no-install-recommends -y \
     build-essential \
+    netcat \
     python3-dev \
     python3-pip \
+    gcc \
     python3-setuptools \
+    musl-dev \
     && apt-get clean \
     && rm -rf /var/lib/apt/lists/*
 
@@ -31,8 +34,10 @@ RUN pip install --upgrade pip \
 COPY . /code/
 
 
+
 # Entrypoint
 COPY Docker/entrypoint.local.sh /usr/local/bin
+RUN sed -i 's/\r$//g' /usr/local/bin/entrypoint.prod.sh
 RUN chmod u+x /usr/local/bin/entrypoint.local.sh
 
 ENTRYPOINT ["/usr/local/bin/entrypoint.local.sh"]
