--- a/peterk/Docker/Dockerfile.local
+++ b/peterk/Docker/Dockerfile.local
@@ -33,11 +33,11 @@ RUN pip install --upgrade pip \
 # Tools
 COPY . /code/
 
-
+EXPOSE 80
+EXPOSE 2222
 
 # Entrypoint
 COPY Docker/entrypoint.local.sh /usr/local/bin
-RUN sed -i 's/\r$//g' /usr/local/bin/entrypoint.local.sh
 RUN chmod u+x /usr/local/bin/entrypoint.local.sh
 
 ENTRYPOINT ["/usr/local/bin/entrypoint.local.sh"]
