--- a/peterk/nginx/nginx.conf
+++ b/peterk/nginx/nginx.conf
@@ -1,4 +1,4 @@
-upstream peterk {
+upstream webhost {
     server web:8000;
 }
 
@@ -8,7 +8,7 @@ server {
     listen 80;
 
     location / {
-        proxy_pass http://peterk;
+        proxy_pass http://webhost;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header Host $host;
         proxy_redirect off;
