--- a/peterk/nginx/nginx.conf
+++ b/peterk/nginx/nginx.conf
@@ -14,7 +14,7 @@ server {
         proxy_redirect off;
     }
 
-    location ./static/ {
+    location /static/ {
         alias /code/staticfiles/;
     }
 
