--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,4 +1,9 @@
-
+# Author: Peter Kulisov
+# Copyright: Peter Kulisov <peter.kulisov@gmail.com>
+# If there are any issues contact me on the email above.
+#
+# Version 1.0
+# Date: 11/08/2022
 exclude: 'readme|.git|.tox'
 default_stages: [commit]
 fail_fast: true
