--- a/peterk/requirements.txt
+++ b/peterk/requirements.txt
@@ -1,3 +1,9 @@
+# Author: Peter Kulisov
+# Copyright: Peter Kulisov <peter.kulisov@gmail.com>
+# If there are any issues contact me on the email above.
+#
+# Version 1.0
+# Date: 11/08/2022
 asgiref==3.5.0
 Django==4.0.4
 pytz==2021.1
