--- a/setup.cfg
+++ b/setup.cfg
@@ -1,3 +1,9 @@
+# Author: Peter Kulisov
+# Copyright: Peter Kulisov <peter.kulisov@gmail.com>
+# If there are any issues contact me on the email above.
+#
+# Version 1.0
+# Date: 11/08/2022
 [flake8]
 max-line-length = 120
 exclude = .tox,.git
